--- a/index.html
+++ b/index.html
@@ -55,19 +55,32 @@
                 </div>
                 <div class="search-container">
                     <input class="input" type="search"/>
-                    <img src="assets/bx_bx-search.png" alt="bx_bx-search"/>
+                    <img class="search" src="assets/bx_bx-search.png" alt="bx_bx-search"/>
                     <img src="./assets/codicon_bell-dot.png" alt="codicon_bell-dot"/>
                     <img src="./assets/User profile.png"/>
                 </div>
             </div>
             <div class="body-container">
                 <div class="activities">
-                    <div class="activity-1"></div>
+                    <div class="activity-1">
+                        <div class="circle">
+                            <span class="circle"></span>
+                            <span class="circle"></span>
+                        </div>
+                        
+                    </div>
                     <div class="activity-2"></div>
                     <div class="activity-3"></div>
                 </div>
                 <div class="result"></div>
-                <div class="learn-more"></div>
+                <div class="learn-more">
+                    <div class="learn-more-text">
+                        <h1>When nothing go right,go left</h1>
+                        <p>Build your skills with courses and degree online from very where with professional instructors.</p>
+                    </div>
+                    <button class="learn-more-btn">Learn more</button>
+                    <img  class="female-img" src="./assets/female image.png"/>
+                </div>
             </div>
         </div>
     </div>
