adding table data

--- a/index.html
+++ b/index.html
@@ -72,7 +72,66 @@
                     <div class="activity-2"></div>
                     <div class="activity-3"></div>
                 </div>
-                <div class="result"></div>
+                <div class="result">
+                    <table>
+                        <tr>
+                            <th>No</th>
+                            <th>course name</th>
+                            <th>Department</th>
+                            <th>Units</th>
+                            <th>Gpa</th>
+                        <tr>
+                            <td>1</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                         <tr>
+                            <td>6</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Task Academic introduction</td>
+                            <td>finance</td>
+                            <td>3</td>
+                            <td>4.5/5</td>
+                        </tr>
+                    </table>
+                    
+                </div>
                 <div class="learn-more">
                     <div class="learn-more-text">
                         <h1>When nothing go right,go left</h1>
